force-app/src/objects/TR1__Candidate_Consents__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Candidate_Response__c</fullName>
        <label>Candidate Response</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>I Consent</fullName>
                </value>
                <value>
                    <fullName>I do not Consent</fullName>
                </value>
                <value>
                    <fullName>Not Responded</fullName>
                </value>
                <value>
                    <fullName>Notice Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Candidate__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Candidate</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Candidate Consents</relationshipLabel>
        <relationshipName>Consents</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Consent_Request_Text__c</fullName>
        <label>Consent Request Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Consent_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consent Type</label>
        <referenceTo>TR1__Consent_Type__c</referenceTo>
        <relationshipName>Consents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Email_Sent_Date__c</fullName>
        <label>Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Is_Consent_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Consent Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TR1__Privacy_Law_Name__c</fullName>
        <formula>TEXT(TR1__Consent_Type__r.TR1__Privacy_Law_Name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Privacy Law Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Response_Date__c</fullName>
        <label>Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TR1__Response_Text__c</fullName>
        <label>Response Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Job Board</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>In Person</fullName>
                </value>
                <value>
                    <fullName>Paper</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Responded</fullName>
                </value>
                <value>
                    <fullName>I Consent</fullName>
                </value>
                <value>
                    <fullName>I do not Consent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Candidate Consents</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CN-{000000}</displayFormat>
        <label>Candidate Consent Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Candidate Consents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>